--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,37 @@
 body {
   overflow-x: hidden;
 }
+a {
+  color: black;
+}
+a:hover {
+  color: gray;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #a2a2a2;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(145, 141, 141);
+}
+::selection{
+  color: white;
+  background-color: black;
+}
+
+:root{
+  
+}
