--- a/src/components/chatSec.css
+++ b/src/components/chatSec.css
@@ -23,34 +23,20 @@
     opacity: 100%;
   }
 }
-.chat-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-bottom: 1px solid lightgray;
-  padding-bottom: 10px;
-}
-.chat-header > div {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-.chat-header > span {
-  background-color: lightgray;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  display: grid;
-  place-items: center;
-  margin-right: 20px;
-  font-weight: bold;
-}
 .chat-body {
   flex: 1;
+  display: flex;
   background-color: lightgray;
   padding: 20px;
   max-height: 876px;
   overflow-y: scroll;
+}
+.msgs {
+  padding-left: 20px;
+  flex: 1;
+}
+.rooms {
+  border-right: 1px solid gray;
 }
 .message {
   background-color: black;
@@ -127,9 +113,6 @@
   .chat {
     padding: 10px;
   }
-  .chat-header {
-    margin-top: 30px;
-  }
   .chat-body {
     padding: 10px;
   }
@@ -151,6 +134,6 @@
 }
 @media screen and (max-width: 768px) {
   .chat-body {
-    max-height: 327px;
+    max-height: 423px;
   }
 }
