--- a/src/components/chatSec/avatar.css
+++ b/src/components/chatSec/avatar.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-left: 10px;
 }
 .chat-header > span {
   width: 45px;
@@ -22,7 +23,6 @@
   border-radius: 50%;
   display: grid;
   place-items: center;
-  margin-right: 10px;
   font-weight: bold;
   border: 1px solid var(--black);
 }
@@ -37,8 +37,5 @@
   }
   .chat-header h4 {
     display: none;
-  }
-  .chat-header > span {
-    margin-right: -2px;
   }
 }
