--- a/src/components/mainPage.css
+++ b/src/components/mainPage.css
@@ -22,6 +22,7 @@
   border-right: 1px solid var(--black);
   transition: width 1s ease;
   position: relative;
+  overflow: hidden;
   /* cursor: pointer; */
 }
 
@@ -50,9 +51,6 @@
 
 
 @media screen and (max-width: 1024px) {
-  .main {
-    flex-direction: column;
-  }
   .swiper-wrapper {
     /* width: 100vh; */
     flex-direction: column;
