--- a/src/components/CvSec/cvSec.css
+++ b/src/components/CvSec/cvSec.css
@@ -1,5 +1,4 @@
 .cv-sec {
-  height: 100%;
   width: 100%;
   opacity: 0;
   transition: opacity 1s ease;
@@ -7,28 +6,59 @@
   padding-top: 100px;
   position: relative;
   display: flex;
+  justify-content: space-around;
 }
 .swiper-slide-active .cv-sec {
   transition: opacity 1s ease;
   opacity: 1;
 }
-.cv-sec-left {
-  flex: 0.4;
-  display: flex;
-  flex-direction: column;
-}
-.cv-sec-left img {
+.cv-sec img {
   width: 200px;
-  height: 200px;
   object-fit: cover;
 }
-.cv-sec-left .skills img {
-  width: 100px;
-  height: 100px;
-  object-fit: contain;
+.cv-sec-left {
+  justify-content: space-around;
+  padding: 20px;
+  display: flex;
+  /* align-items: center; */
+  color: var(--black);
 }
-.cv-sec-right {
-  flex: 0.6;
+.cv-sec-left .about {
+  width: 65%;
+}
+.cv-sec-left .about h3 {
+  color: var(--black);
+  border-bottom: 2px solid var(--black);
+  padding-bottom: 10px;
+  margin-top: 30px;
+}
+.cv-sec-left .about p {
+  color: var(--black);
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+  text-align: justify;
+  padding-top: 10px;
+}
+.skills {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.skills div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--black);
+  margin-bottom: 20px;
+}
+.skills img {
+  width: 90px;
+  height: 90px;
+  object-fit: contain;
+  border: 3px solid var(--black);
+  border-radius: 50%;
 }
 
 @media screen and (max-width: 1024px) {
@@ -41,5 +71,52 @@
     padding: 10px;
     padding-top: 70px;
     overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cv-sec {
+    padding: 10px;
+    padding-top: 40px;
+    flex-direction: row;
+  }
+  .cv-sec-left div:first-child {
+    display: none;
+  }
+  .cv-sec-left .about {
+    width: 100%;
+  }
+  .skills {
+    /* width: 100%; */
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .skills img {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .cv-sec {
+    padding: 5px;
+    padding-top: 50px;
+    flex-direction: column;
+  }
+  .cv-sec-left .about {
+    width: 100%;
+  }
+  .skills {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  .about div:last-child{
+    display: none;
+  }
+  .about div:first-child{
+    margin-bottom: 20px;
+    display: block;
   }
 }
